crpCalendar
v0.5.4 - ??? 2009
- added caption field for files
v0.5.3 - 15 september 2009
- updated datepicker to v5
- added config for showing sub-categories events when watching a category
- fix for block from locations module
- rss validation fixes
v0.5.2 - 18 april 2009
- fixed tons of cached and compiled templates generation
- added config param for complete or date only format
v0.5.1 - 4 march 2009
- added config param week starts on (monday or sunday)
v0.5.0 - 17 february 2009
- removed pn_ prefix from table definitions
- added support for formicula's inclusions (only from admin new and modify funcs)
- added more compatibility with PostGRE backend
v0.4.9 - 18 august 2008
- added event multiple start dates for admins, by module vars
- added re-enter admin creation button
- added delete link in admin modify, near CANCEL and UPDATE
- added date and location to title search result
v0.4.8 - 14 august 2008
- added module var for events submitted by users initial status
- added check to prevent duplicate entries by "title,location,start_date"
v0.4.7 - 13 august 2008
- added setting for mandatory/not mandatory event content
- added purge event from a date
v0.4.6 - 11 august 2008
- categorized day-list view(settings): show day events grouped by category(ordered)
- categorized or not year-list view(settings): show year events grouped by category(ordered) or not
- added table sort by title
- added events block by location
- basic iCal import
- added events month block
v0.4.5 - 13 July 2008
- added e-mail notification for user submission
- added display/hide event end date based on "day event" check
- better visualization for "day event" date
- new unobtrusive datepicker
- if locations module is enabled, you can take places from there (or use your own manually inserted)
- added automatic categories feeds to browser address-bar (where supported ;-) )
- added upcoming/archive filter into list view
- it's possible to turn monthly view into a list and viceversa